@@ -31,11 +31,11 @@ import static org.opencast.annotation.impl.persistence.ScaleValueDto.toScaleValu
 import static org.opencast.annotation.impl.persistence.TrackDto.toTrack;
 import static org.opencast.annotation.impl.persistence.UserDto.toUser;
 import static org.opencast.annotation.impl.persistence.VideoDto.toVideo;
+import static org.opencast.annotation.util.data.Monadics.mlist;
+import static org.opencast.annotation.util.data.Option.none;
+import static org.opencast.annotation.util.data.Option.option;
+import static org.opencast.annotation.util.data.Option.some;
 import static org.opencastproject.db.Queries.namedQuery;
-import static org.opencastproject.util.data.Monadics.mlist;
-import static org.opencastproject.util.data.Option.none;
-import static org.opencastproject.util.data.Option.option;
-import static org.opencastproject.util.data.Option.some;
 
 import org.opencast.annotation.api.Annotation;
 import org.opencast.annotation.api.Category;
@@ -62,6 +62,12 @@ import org.opencast.annotation.impl.ScaleValueImpl;
 import org.opencast.annotation.impl.TrackImpl;
 import org.opencast.annotation.impl.UserImpl;
 import org.opencast.annotation.impl.VideoImpl;
+import org.opencast.annotation.util.data.Effect;
+import org.opencast.annotation.util.data.Function;
+import org.opencast.annotation.util.data.Function0;
+import org.opencast.annotation.util.data.Option;
+import org.opencast.annotation.util.data.Option.Match;
+import org.opencast.annotation.util.data.Predicate;
 
 import org.opencastproject.db.DBSession;
 import org.opencastproject.db.DBSessionFactory;
@@ -72,12 +78,6 @@ import org.opencastproject.security.api.SecurityConstants;
 import org.opencastproject.security.api.SecurityService;
 import org.opencastproject.security.api.UnauthorizedException;
 import org.opencastproject.util.NotFoundException;
-import org.opencastproject.util.data.Effect;
-import org.opencastproject.util.data.Function;
-import org.opencastproject.util.data.Function0;
-import org.opencastproject.util.data.Option;
-import org.opencastproject.util.data.Option.Match;
-import org.opencastproject.util.data.Predicate;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.json.simple.parser.JSONParser;
@@ -561,7 +561,7 @@ public final class ExtendedAnnotationServiceJpaImpl implements ExtendedAnnotatio
       List<Category> seriesCategories = categoryDtos.stream()
               .map(CategoryDto::toCategory)
               .filter(category -> Option.some(category.getId()).equals(category.getSeriesCategoryId()))
-              .collect(Collectors.toList());
+              .toList();
 
       // Link a category to a master series category if they are "sufficiently" equal
       for (Category videoCategory : allCategories) {
@@ -638,7 +638,7 @@ public final class ExtendedAnnotationServiceJpaImpl implements ExtendedAnnotatio
           id(category.getSeriesCategoryId().get()));
       List<Category> withSeriesCategoryId = categoryDtos.stream()
               .map(CategoryDto::toCategory)
-              .collect(Collectors.toList());
+              .toList();
       for (Category categoryBelongingToMaster: withSeriesCategoryId) {
         result = deleteCategoryImpl(categoryBelongingToMaster);
       }
@@ -738,9 +738,7 @@ public final class ExtendedAnnotationServiceJpaImpl implements ExtendedAnnotatio
 
         // Update our labels with the labels from the master series category
         // Note: Maybe do an actual update instead of delete/create
-        for (Label label: labels) {
-          deleteLabel(label);
-        }
+        labels.replaceAll(this::deleteLabel);
         List<Label> newLabels = new ArrayList<>();
         for (Label seriesLabel : seriesCategoryLabels) {
           final LabelDto dto = LabelDto.create(some(seriesLabel.getId()), categoryId, seriesLabel.getValue(),
